--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,31 @@
 language: elixir
-
+elixir:
+  - 1.4
+  - 1.5
+  - 1.6
+  - 1.7
+  - 1.8
+otp_release:
+  - 19.3
+  - 20.3
+  - 21.0
+matrix:
+  exclude:
+    - elixir: 1.4
+      otp_release: 21.0
+    - elixir: 1.5
+      otp_release: 21.0
+    - elixir: 1.7
+      otp_release: 19.3
+    - elixir: 1.7
+      otp_release: 20.3
+    - elixir: 1.8
+      otp_release: 19.3
+    - elixir: 1.8
+      otp_release: 20.3
 env:
   global:
     - MIX_ENV=test
-
-matrix:
-  include:
-    - elixir:      1.3.4
-      env:         TRAVIS_COVERAGE=true
-      otp_release: 18.3
-    - elixir:      1.4.2
-      otp_release: 18.3
-    - elixir:      1.4.2
-      otp_release: 19.3
-
 after_success: |
   if [ ! -z "${TRAVIS_COVERAGE}" ]; then
     mix coveralls.travis
