--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           # Only Elixir 1.14 supports OTP 25
           - otp: "25.3"
             elixir: "1.14.4"
+          # We need to test Elixir 1.4 for backwards compatibility
+          - otp: "20.3.8.26"
+            elixir: "1.4.5"
     steps:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
