--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,15 +21,16 @@ jobs:
       - run: mix format --check-formatted
   test:
     name: Test on Elixir ${{ matrix.elixir }} (OTP ${{ matrix.otp }})
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         otp: ["26.2.5.13", "25.3.2.21", "24.3.4.17"]
         elixir: ["1.15.8", "1.14.5"]
-        include:
-          # Only Elixir 1.14 still supports OTP 23
-          - otp: "23.3.4.20"
-            elixir: "1.14.5"
+        # include:
+          # Elixir 1.14 still supports OTP 23, but it requires ubuntu-20.04
+          # which is no longer supported in GH Actions
+          # - otp: "23.3.4.20"
+          #  elixir: "1.14.5"
     steps:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
