--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,8 @@ jobs:
         otp: ["26", "25"]
         elixir: ["1.18", "1.17", "1.16", "1.15", "1.14"]
         include:
-          # Has issues that need to be resolved
-          #- otp: "28"
-          #  elixir: "1.18"
+          - otp: "28"
+            elixir: "1.18"
           - otp: "27"
             elixir: "1.18"
           - otp: "27"
